령현-메인 매물리스트 완료

--- a/app/src/main/res/layout/activity_sliding_myinfo.xml
+++ b/app/src/main/res/layout/activity_sliding_myinfo.xml
@@ -134,7 +134,7 @@
     <TextView
         style="@style/bottombutton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:text="@string/schedule_button"
         android:textColor="@color/AppColorWhite" />
 
