--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,22 @@
         android:background="@color/AppColorLightBlue"
         android:padding="10dp">
 
+        <LinearLayout
+            android:id="@+id/activity_main_noexist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:orientation="vertical"
+            android:visibility="invisible">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="등록된 매물이 없습니다."
+                android:textColor="@color/AppColorBlack"
+                android:textSize="25sp" />
+        </LinearLayout>
+
         <ListView
             android:id="@+id/activity_main_listview"
             android:layout_width="match_parent"
