--- a/app/src/main/res/layout/activity_sliding_schedule.xml
+++ b/app/src/main/res/layout/activity_sliding_schedule.xml
@@ -38,6 +38,27 @@
             android:background="@color/AppColorWhite"
             android:padding="10dp">
 
+            <LinearLayout
+                android:id="@+id/activity_schedule_noexist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical">
+                <ImageView
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/notice_noexist_icon" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="스케줄 내역이 없습니다."
+                    android:textColor="@color/AppColorLightGray"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
             <ListView
                 android:id="@+id/activity_schedule_listview"
                 android:layout_width="match_parent"
