--- a/app/src/main/res/layout/fragment_rentaldetail_oneway.xml
+++ b/app/src/main/res/layout/fragment_rentaldetail_oneway.xml
@@ -77,6 +77,7 @@
                             android:layout_height="wrap_content"
                             android:textAlignment="textEnd"
                             android:background="#ffffff"
+                            android:inputType="number"
                             android:lines="1"
                             android:maxLines="1"
                             android:textSize="20sp"/>
