--- a/app/src/main/res/layout/fragment_rentaldetail_twoway.xml
+++ b/app/src/main/res/layout/fragment_rentaldetail_twoway.xml
@@ -2,27 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/AppColorWhite"
     android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:background="@color/AppColorWhite">
+    android:focusableInTouchMode="true">
 
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="195dp"
-               >
-                <include layout="@layout/listview_item_two_way"/>
+                android:layout_height="195dp">
+
+                <include layout="@layout/listview_item_two_way" />
             </RelativeLayout>
 
             <TextView
@@ -74,16 +74,17 @@
                             android:id="@+id/fragment_rentaldetail_twoway_et_tenderPrice"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
-                            android:textAlignment="textEnd"
                             android:background="#ffffff"
-                            android:textSize="20sp"/>
+                            android:inputType="number"
+                            android:textAlignment="textEnd"
+                            android:textSize="20sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:paddingLeft="13dp"
                             android:text="원"
-                            android:textSize="20sp"/>
+                            android:textSize="20sp" />
                     </LinearLayout>
 
                 </RelativeLayout>
@@ -96,16 +97,17 @@
                 android:padding="5dp">
 
                 <TextView
+                    style="@style/signintext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    style="@style/signintext"
-                    android:text="추가 비용"/>
+                    android:text="추가 비용" />
 
                 <LinearLayout
-                    android:layout_marginBottom="70dp"
-                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="70dp"
+                    android:orientation="vertical">
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -115,35 +117,41 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_marginRight="15dp"
-                                android:src="@drawable/toll_icon"/>
+                                android:src="@drawable/toll_icon" />
+
                             <TextView
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/colorPrimary"
-                                android:text="톨비"/>
+                                android:text="톨비"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_toll_exclude"
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/AppColorLightGray"
-                                android:text="미포함"/>
+                                android:text="미포함"
+                                android:textColor="@color/AppColorLightGray" />
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_toll_include"
                                 style="@style/detail_plus_text"
                                 android:layout_marginLeft="15dp"
-                                android:textColor="@color/colorPrimary"
-                                android:text="포함"/>
+                                android:text="포함"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -153,15 +161,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_marginRight="15dp"
-                                android:src="@drawable/park_icon"/>
+                                android:src="@drawable/park_icon" />
+
                             <TextView
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/colorPrimary"
-                                android:text="주차비"/>
+                                android:text="주차비"
+                                android:textColor="@color/colorPrimary" />
 
                         </LinearLayout>
 
@@ -171,19 +181,22 @@
                             android:layout_alignParentRight="true"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_park_exclude"
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/AppColorLightGray"
-                                android:text="미포함"/>
+                                android:text="미포함"
+                                android:textColor="@color/AppColorLightGray" />
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_park_include"
                                 style="@style/detail_plus_text"
                                 android:layout_marginLeft="15dp"
-                                android:textColor="@color/colorPrimary"
-                                android:text="포함"/>
+                                android:text="포함"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -193,15 +206,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_marginRight="15dp"
-                                android:src="@drawable/food_icon"/>
+                                android:src="@drawable/food_icon" />
+
                             <TextView
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/colorPrimary"
-                                android:text="식사비"/>
+                                android:text="식사비"
+                                android:textColor="@color/colorPrimary" />
 
                         </LinearLayout>
 
@@ -211,19 +226,22 @@
                             android:layout_alignParentRight="true"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_food_exclude"
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/AppColorLightGray"
-                                android:text="미포함"/>
+                                android:text="미포함"
+                                android:textColor="@color/AppColorLightGray" />
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_food_include"
                                 style="@style/detail_plus_text"
                                 android:layout_marginLeft="15dp"
-                                android:textColor="@color/colorPrimary"
-                                android:text="포함"/>
+                                android:text="포함"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -233,15 +251,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_marginRight="15dp"
-                                android:src="@drawable/motel_icon"/>
+                                android:src="@drawable/motel_icon" />
+
                             <TextView
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/colorPrimary"
-                                android:text="숙박비"/>
+                                android:text="숙박비"
+                                android:textColor="@color/colorPrimary" />
 
                         </LinearLayout>
 
@@ -251,19 +271,22 @@
                             android:layout_alignParentRight="true"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_motel_exclude"
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/AppColorLightGray"
-                                android:text="미포함"/>
+                                android:text="미포함"
+                                android:textColor="@color/AppColorLightGray" />
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_motel_include"
                                 style="@style/detail_plus_text"
                                 android:layout_marginLeft="15dp"
-                                android:textColor="@color/colorPrimary"
-                                android:text="포함"/>
+                                android:text="포함"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -273,15 +296,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_marginRight="15dp"
-                                android:src="@drawable/vol_icon"/>
+                                android:src="@drawable/vol_icon" />
+
                             <TextView
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/colorPrimary"
-                                android:text="봉사료"/>
+                                android:text="봉사료"
+                                android:textColor="@color/colorPrimary" />
 
                         </LinearLayout>
 
@@ -291,19 +316,22 @@
                             android:layout_alignParentRight="true"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_vol_exclude"
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/AppColorLightGray"
-                                android:text="미포함"/>
+                                android:text="미포함"
+                                android:textColor="@color/AppColorLightGray" />
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_vol_include"
                                 style="@style/detail_plus_text"
                                 android:layout_marginLeft="15dp"
-                                android:textColor="@color/colorPrimary"
-                                android:text="포함"/>
+                                android:text="포함"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
                     </RelativeLayout>
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -313,15 +341,17 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="center_vertical">
+
                             <ImageView
                                 android:layout_width="15dp"
                                 android:layout_height="15dp"
                                 android:layout_marginRight="15dp"
-                                android:src="@drawable/tax_icon"/>
+                                android:src="@drawable/tax_icon" />
+
                             <TextView
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/colorPrimary"
-                                android:text="부가세"/>
+                                android:text="부가세"
+                                android:textColor="@color/colorPrimary" />
 
                         </LinearLayout>
 
@@ -331,17 +361,19 @@
                             android:layout_alignParentRight="true"
                             android:gravity="center_vertical"
                             android:orientation="horizontal">
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_tax_exclude"
                                 style="@style/detail_plus_text"
-                                android:textColor="@color/AppColorLightGray"
-                                android:text="미포함"/>
+                                android:text="미포함"
+                                android:textColor="@color/AppColorLightGray" />
+
                             <TextView
                                 android:id="@+id/fragment_rentaldetail_twoway_tv_tax_include"
                                 style="@style/detail_plus_text"
                                 android:layout_marginLeft="15dp"
-                                android:textColor="@color/colorPrimary"
-                                android:text="포함"/>
+                                android:text="포함"
+                                android:textColor="@color/colorPrimary" />
                         </LinearLayout>
                     </RelativeLayout>
                 </LinearLayout>
@@ -350,15 +382,17 @@
 
         </LinearLayout>
     </ScrollView>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
-            android:layout_alignParentEnd="true"
             android:id="@+id/fragment_rentaldetail_twoway_tv_enter"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
             android:background="@color/colorPrimary"
             android:gravity="center"
             android:text="입찰 하기"
