--- a/app/src/main/res/layout/fragment_signin_license.xml
+++ b/app/src/main/res/layout/fragment_signin_license.xml
@@ -9,6 +9,7 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="none"
         android:layout_below="@id/subtitle">
 
         <LinearLayout
