--- a/app/src/main/res/layout/fragment_signin_user.xml
+++ b/app/src/main/res/layout/fragment_signin_user.xml
@@ -8,6 +8,7 @@
     <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="none"
         android:layout_below="@id/subtitle">
 
         <LinearLayout
