--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,16 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--영업지영-->
+    <!--영업지역-->
     <string-array name="workArea">
         <item>서울</item>
-        <item>수도권</item>
-        <item>충청권</item>
-        <item>강원권</item>
-        <item>영남권</item>
-        <item>호남권</item>
+        <item>세종</item>
+        <item>부산</item>
+        <item>인천</item>
+        <item>대구</item>
+        <item>광주</item>
+        <item>대전</item>
+        <item>울산</item>
+        <item>제주</item>
+        <item>경기</item>
+        <item>강원</item>
+        <item>충북</item>
+        <item>충남</item>
+        <item>전북</item>
+        <item>전남</item>
+        <item>경북</item>
+        <item>경남</item>
     </string-array>
-
+    <!--영업지역-->
+    <string-array name="main_workArea">
+        <item>서울</item>
+        <item>세종</item>
+        <item>부산</item>
+        <item>인천</item>
+        <item>대구</item>
+        <item>광주</item>
+        <item>대전</item>
+        <item>울산</item>
+        <item>제주</item>
+        <item>경기</item>
+        <item>강원</item>
+        <item>충북</item>
+        <item>충남</item>
+        <item>전북</item>
+        <item>전남</item>
+        <item>경북</item>
+        <item>경남</item>
+    </string-array>
     <!--계좌-->
     <string-array name="bank">
         <item>신한</item>
