--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,7 @@
             android:layout_height="match_parent"
             android:dividerHeight="10dp"
             android:scrollbars="none"
-            android:divider="@color/AppColorLightBlue"
-            android:background="@color/AppColorWhite" />
+            android:divider="@color/AppColorLightBlue" />
 
 
     </RelativeLayout>
