--- a/app/src/main/res/layout/listview_item_notice.xml
+++ b/app/src/main/res/layout/listview_item_notice.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -14,6 +14,7 @@
             android:layout_marginLeft="10dp"
             android:layout_alignParentStart="true"
             android:textSize="15sp"
+            android:textColor="@color/AppColorBlack"
             android:text="지역"/>
 
         <TextView
@@ -23,6 +24,7 @@
             android:layout_marginRight="10dp"
             android:layout_alignParentEnd="true"
             android:textSize="15sp"
+            android:textColor="@color/AppColorBlack"
             android:text="렌탈번호"/>
     </RelativeLayout>
 
