--- a/app/src/main/res/layout/listview_item_schedule_one_way.xml
+++ b/app/src/main/res/layout/listview_item_schedule_one_way.xml
@@ -3,32 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:src="@drawable/listview_one_way" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="편도"
-            android:textColor="@color/colorPrimaryGray"
-            android:textSize="15sp" />
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:orientation="vertical">
+        android:layout_height="190dp"
+        android:orientation="vertical"
+        android:padding="5dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -51,7 +32,7 @@
                     android:src="@drawable/listview_calender" />
 
                 <TextView
-                    android:id="@+id/listview_tender_one_way_startDate"
+                    android:id="@+id/listview_schedule_one_way_startDate"
                     style="@style/listviewText"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
@@ -123,7 +104,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -153,6 +133,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="3dp"
+                        android:layout_marginRight="1dp"
                         android:text="원"
                         android:textColor="@color/colorPrimaryGray"
                         android:textSize="17sp" />
@@ -171,13 +152,13 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_weight="1" />
+                        android:layout_weight="5" />
 
                     <LinearLayout
-                        android:id="@+id/listview_schedule_one_way_cancelBtn"
+                        android:id="@+id/listview_schedule_one_way_btn_showUser"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:layout_weight="1"
+                        android:layout_weight="4"
                         android:background="@drawable/schedule_btninfo"
                         android:gravity="center"
                         android:orientation="vertical"
@@ -190,7 +171,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="20dp"
+            android:layout_height="30dp"
             android:layout_margin="5dp"
             android:background="@drawable/schedule_state_back">
             <TextView
@@ -202,6 +183,29 @@
                 android:textSize="15sp" />
         </RelativeLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="15dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/listview_one_way"
+            android:id="@+id/imageView4" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="편도"
+            android:textColor="@color/colorPrimaryGray"
+            android:textSize="15sp" />
     </LinearLayout>
 
 </RelativeLayout>
