--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
+                android:inputType="number"
                 android:lines="1"
                 android:maxLines="1"
                 android:textSize="23sp"
@@ -84,6 +85,7 @@
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
+                android:inputType="number"
                 android:lines="1"
                 android:maxLines="1"
                 android:textSize="23sp"
