--- a/app/src/main/res/layout/activity_sliding_setting.xml
+++ b/app/src/main/res/layout/activity_sliding_setting.xml
@@ -27,13 +27,30 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/btnBottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/activity_sliding_setting_tv_enter"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="설정 완료"
+            android:textColor="@color/AppColorWhite"
+            android:textSize="30sp" />
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/btnBottom"
-        android:layout_below="@+id/top"
         android:background="@color/AppColorWhite"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true">
 
 
         <LinearLayout
@@ -159,21 +176,4 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/btnBottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
-        <TextView
-            android:id="@+id/activity_sliding_setting_tv_enter"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:text="설정 완료"
-            android:textColor="@color/AppColorWhite"
-            android:textSize="30sp" />
-    </RelativeLayout>
 </RelativeLayout>
