--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -79,7 +79,7 @@
         <item name="android:layout_marginRight">13dp</item>
         <item name="android:background">#ffffff</item>
         <item name="android:lines">1</item>
-        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
         <item name="android:textColor">#000000</item>
         <item name="android:textSize">22sp</item>
     </style>
