--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -82,6 +82,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/AppColorLightGray"
         android:padding="10dp">
 
         <LinearLayout
@@ -111,6 +112,7 @@
             android:id="@+id/activity_notice_listview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:divider="@color/AppColorLightGray"
             android:dividerHeight="10dp"
             android:scrollbars="none"/>
 
