--- a/app/src/main/res/layout/listview_item_notice.xml
+++ b/app/src/main/res/layout/listview_item_notice.xml
@@ -7,25 +7,17 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:gravity="center_vertical">
+
         <TextView
-            android:id="@+id/listview_notice_region"
+            android:id="@+id/listview_notice_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="15dp"
             android:layout_alignParentStart="true"
-            android:textSize="15sp"
+            android:textSize="17sp"
             android:textColor="@color/AppColorBlack"
             android:text="지역"/>
 
-        <TextView
-            android:id="@+id/listview_notice_rentalNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentEnd="true"
-            android:textSize="15sp"
-            android:textColor="@color/AppColorBlack"
-            android:text="렌탈번호"/>
     </RelativeLayout>
 
 </LinearLayout>
