--- a/app/src/main/res/layout/activity_sliding_myinfo.xml
+++ b/app/src/main/res/layout/activity_sliding_myinfo.xml
@@ -16,120 +16,142 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="26dp"
             android:onClick="onClick_backButton"
-            android:src ="@drawable/white_back_button"/>
+            android:src="@drawable/white_back_button" />
 
         <TextView
-            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="@string/myinfo"
             android:textColor="#FFFFFF"
-            android:textSize="@dimen/titlesize" />
+            android:textSize="@dimen/titlesize"
+            android:textStyle="bold" />
     </RelativeLayout>
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <ScrollView
         android:layout_below="@id/title_bar"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/activity_sliding_myinfo_rv_list"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
+                android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="@color/AppColorLightGrayTwo"/>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/activity_sliding_myinfo_rv_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="90dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:background="@color/AppColorLightGrayTwo" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/activity_sliding_myinfo_iv_profile"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="10dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/activity_sliding_myinfo_tv_nickname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/activity_sliding_myinfo_iv_profile"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginLeft="10dp" />
+
+                <TextView
+                    android:id="@+id/activity_sliding_myinfo_tv_nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="김버"
+                    android:textColor="#545353"
+                    android:textSize="22sp" />
+
+                <TextView
+                    android:id="@+id/activity_sliding_myinfo_tv_money"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:gravity="right"
+                    android:text="인증 완료"
+                    android:textColor="@color/colorRed"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
-                android:text="김버"
-                android:textColor="#545353"
-                android:textSize="22sp" />
-
-            <TextView
-                android:id="@+id/activity_sliding_myinfo_tv_money"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:gravity="right"
-                android:text="인증 완료"
-                android:textColor="@color/colorRed"
-                android:textSize="22sp" />
-        </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/activity_sliding_myinfo_tv_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/rectangle_box"
+                    android:gravity="center"
+                    android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/activity_sliding_myinfo_tv_type"
+                <RelativeLayout
+                    android:layout_width="10dp"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/activity_sliding_myinfo_tv_career"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/rectangle_box"
+                    android:gravity="center"
+                    android:textSize="20sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/rectangle_box"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp">
 
-            <RelativeLayout
-                android:layout_width="10dp"
-                android:layout_height="match_parent"/>
+                <TextView
+                    android:id="@+id/activity_sliding_myinfo_tv_carnum"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/rectangle_box"
+                    android:gravity="center"
+                    android:textSize="20sp" />
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/activity_sliding_myinfo_tv_career"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/rectangle_box"
-                android:gravity="center"
-                android:textSize="20sp" />
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:id="@+id/activity_sliding_myinfo_tv_btnModify"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/roundbutton_blue"
+                    android:gravity="center"
+                    android:text="나의 정보 수정"
+                    android:textColor="@color/AppColorWhite"
+                    android:textSize="22sp" />
+            </LinearLayout>
+
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp">
-
-            <TextView
-                android:id="@+id/activity_sliding_myinfo_tv_carnum"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/rectangle_box"
-                android:gravity="center"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-    </LinearLayout>
-
+    </ScrollView>
 
 </RelativeLayout>
