--- a/app/src/main/res/layout/activity_sliding_setting.xml
+++ b/app/src/main/res/layout/activity_sliding_setting.xml
@@ -31,9 +31,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/setting_bottom"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/setting_top"
-        android:layout_above="@+id/setting_bottom"
         android:background="@color/AppColorWhite"
         android:orientation="vertical">
 
@@ -43,142 +43,132 @@
             android:layout_height="8dp"
             android:background="@color/AppColorLightGray" />
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:orientation="vertical"
-                    android:paddingBottom="10dp"
-                    android:paddingTop="10dp">
-
-                    <TextView
-                        style="@style/logintext"
-                        android:text="계좌 번호 " />
-
-                    <Spinner
-                        android:id="@+id/activity_sliding_setting_spinner_bank"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="5dp"
-                        android:background="@drawable/spinner_box"
-                        android:orientation="horizontal" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="20dp"
-                        android:background="@drawable/white_rounded_rectangle"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/activity_sliding_setting_et_accountnum"
-                            style="@style/signineEditText"
-                            android:hint="'-'없이 입력"
-                            android:inputType="number" />
-
-                    </LinearLayout>
-                </LinearLayout>
-
-
-                <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="30dp"-->
-                <!--android:layout_marginTop="10dp">-->
-
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginLeft="5dp"-->
-                <!--android:textColor="@color/AppColorBlack"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:textSize="22sp"-->
-                <!--android:text="푸시 알림"/>-->
-
-                <!--<RelativeLayout-->
-                <!--android:id="@+id/activity_notice_on_or_off_layout"-->
-                <!--android:layout_width="160dp"-->
-                <!--android:layout_height="30dp"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:layout_centerVertical="true"-->
-                <!--android:layout_marginRight="20dp"-->
-                <!--android:background="@drawable/notice_on">-->
-
-                <!--<LinearLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent"-->
-                <!--android:orientation="horizontal">-->
-
-                <!--<TextView-->
-                <!--android:id="@+id/activity_sliding_setting_on_text"-->
-                <!--android:layout_width="80dp"-->
-                <!--android:layout_height="30dp"-->
-                <!--android:gravity="center"-->
-                <!--android:text="켜기"-->
-                <!--android:textColor="@color/AppColorWhite"-->
-                <!--android:textSize="15sp" />-->
-
-                <!--<TextView-->
-                <!--android:id="@+id/activity_sliding_setting_off_text"-->
-                <!--android:layout_width="80dp"-->
-                <!--android:layout_height="30dp"-->
-                <!--android:gravity="center"-->
-                <!--android:text="끄기"-->
-                <!--android:textColor="@color/colorPrimary"-->
-                <!--android:textSize="15sp" />-->
-                <!--</LinearLayout>-->
-                <!--</RelativeLayout>-->
-
-                <!--</RelativeLayout>-->
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:orientation="vertical"
+                android:paddingBottom="10dp"
+                android:paddingTop="10dp">
 
                 <TextView
-                    android:id="@+id/activity_sliding_setting_tv_logout"
+                    style="@style/logintext"
+                    android:text="계좌 번호 수정" />
+
+                <Spinner
+                    android:id="@+id/activity_sliding_setting_spinner_bank"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginTop="23dp"
-                    android:background="@drawable/sliding_setting_btncancel_back"
-                    android:gravity="center"
-                    android:text="회원 탈퇴"
-                    android:textColor="@color/AppColorWhite"
-                    android:textSize="22sp" />
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/spinner_box"
+                    android:orientation="horizontal" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="85dp"
-                    android:background="@color/AppColorWhite"></LinearLayout>
+                    android:layout_height="50dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/white_rounded_rectangle"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/activity_sliding_setting_et_accountnum"
+                        style="@style/signineEditText"
+                        android:hint="'-'없이 입력"
+                        android:inputType="number" />
+
+                </LinearLayout>
             </LinearLayout>
-        </ScrollView>
+
+
+            <!--<RelativeLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:layout_marginTop="10dp">-->
+
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="5dp"-->
+            <!--android:textColor="@color/AppColorBlack"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:textSize="22sp"-->
+            <!--android:text="푸시 알림"/>-->
+
+            <!--<RelativeLayout-->
+            <!--android:id="@+id/activity_notice_on_or_off_layout"-->
+            <!--android:layout_width="160dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:background="@drawable/notice_on">-->
+
+            <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:orientation="horizontal">-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/activity_sliding_setting_on_text"-->
+            <!--android:layout_width="80dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:gravity="center"-->
+            <!--android:text="켜기"-->
+            <!--android:textColor="@color/AppColorWhite"-->
+            <!--android:textSize="15sp" />-->
+
+            <!--<TextView-->
+            <!--android:id="@+id/activity_sliding_setting_off_text"-->
+            <!--android:layout_width="80dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:gravity="center"-->
+            <!--android:text="끄기"-->
+            <!--android:textColor="@color/colorPrimary"-->
+            <!--android:textSize="15sp" />-->
+            <!--</LinearLayout>-->
+            <!--</RelativeLayout>-->
+
+            <!--</RelativeLayout>-->
+
+            <TextView
+                android:id="@+id/activity_sliding_setting_tv_logout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/sliding_setting_btncancel_back"
+                android:gravity="center"
+                android:text="회원 탈퇴"
+                android:textColor="@color/AppColorWhite"
+                android:textSize="22sp" />
+        </LinearLayout>
     </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/setting_bottom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        >
+        android:layout_alignParentBottom="true">
 
         <TextView
             android:id="@+id/activity_sliding_setting_tv_enter"
             android:layout_width="match_parent"
             android:layout_height="70dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:background="@color/colorPrimary"
             android:gravity="center"
             android:text="설정 완료"
             android:textColor="@color/AppColorWhite"
-            android:textSize="30sp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:textSize="30sp" />
     </RelativeLayout>
+
 </RelativeLayout>
