--- a/app/src/main/res/layout/fragment_rentaldetail_oneway_together.xml
+++ b/app/src/main/res/layout/fragment_rentaldetail_oneway_together.xml
@@ -62,7 +62,7 @@
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:textAlignment="textEnd"
-                        android:textColor="@color/AppColorLightGray"
+                        android:textColor="@color/AppColorGray"
                         android:textSize="20sp" />
 
                     <TextView
