--- a/app/src/main/res/layout/listview_item_notice.xml
+++ b/app/src/main/res/layout/listview_item_notice.xml
@@ -19,6 +19,16 @@
             android:textColor="@color/AppColorBlack"
             android:text="지역"/>
 
+        <TextView
+            android:id="@+id/listview_notice_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:layout_alignParentEnd="true"
+            android:textSize="17sp"
+            android:textColor="@color/AppColorLightGray"
+            android:text="지역"/>
+
     </RelativeLayout>
 
 </LinearLayout>
