--- a/app/src/main/res/layout/listview_item_one_way_together_bottom.xml
+++ b/app/src/main/res/layout/listview_item_one_way_together_bottom.xml
@@ -28,10 +28,9 @@
         <TextView
             android:id="@+id/listview_one_way_together_bottom_price"
             style="@style/listviewText"
-            android:layout_width="80dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="800,000" />
+            android:layout_marginLeft="15dp" />
 
         <TextView
             style="@style/listviewText"
