--- a/app/src/main/res/layout/listview_item_one_way_top.xml
+++ b/app/src/main/res/layout/listview_item_one_way_top.xml
@@ -55,7 +55,6 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     style="@style/listviewText"
-                    android:text="2016년 6월 30일"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp" />
 
@@ -63,7 +62,6 @@
                     android:id="@+id/listview_one_way_startTime"
                     android:layout_marginLeft="10dp"
                     style="@style/listviewText"
-                    android:text="오전 9시"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
@@ -103,8 +101,7 @@
                     android:id="@+id/listview_one_way_startPlace"
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ERROR" />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -114,8 +111,7 @@
                     android:id="@+id/listview_one_way_endPlace"
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ERROR" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
 
@@ -145,8 +141,7 @@
                         style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="ERROR" />
+                        android:layout_weight="1" />
 
                 </LinearLayout>
 
@@ -171,8 +166,7 @@
                         style="@style/listviewText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="30" />
+                        android:layout_weight="1" />
 
                     <TextView
                         style="@style/listviewText"
