--- a/app/src/main/res/layout/listview_item_tender_one_way.xml
+++ b/app/src/main/res/layout/listview_item_tender_one_way.xml
@@ -35,16 +35,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:text="2016년 6월 30일" />
+                    android:layout_marginRight="10dp" />
 
                 <TextView
                     android:id="@+id/listview_tender_one_way_startTime"
                     style="@style/listviewText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="오전 9시" />
+                    android:layout_marginLeft="10dp" />
 
             </LinearLayout>
 
@@ -72,7 +70,7 @@
                 android:src="@drawable/listview_one_arrow" />
 
             <LinearLayout
-                android:layout_width="150dp"
+                android:layout_width="140dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
@@ -82,8 +80,7 @@
                     android:id="@+id/listview_tender_one_way_startPlace"
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ERROR" />
+                    android:layout_height="wrap_content" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -93,8 +90,7 @@
                     android:id="@+id/listview_tender_one_way_endPlace"
                     style="@style/listviewPlaceText"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="ERROR" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
 
